[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/towers/tower.png" type="Texture" id=1]
[ext_resource path="res://objects/towers/tower.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/heretic_ranged/heretic_ranged_projectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 123.584

[node name="Tower" type="Node2D"]
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="AttackInterval" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="AttackInterval" to="." method="_on_AttackInterval_timeout"]
